# Study-Notes

./: .clang-format  .gitignore  IsaacLab&MotionRetargeting.ipynb  casadi.ipynb  control.md  dynamic_plot.py  ibvs.ipynb  isaacgym.ipynb  linux.md  lstm_example.ipynb  markdown.md  open3d.ipynb  programming.md  pytorch.ipynb  rl_principle.ipynb  ros.md  scripts.md  transformer.ipynb
C++Project/: CMakeLists.txt
C++Project/include/: hello.h
C++Project/src/: hello.cpp  time.cpp
Interview/: note.md
mujoco/: MUJOCO_LOG.TXT  visualize.py
mujoco/asset/: env.xml
mujoco_arm_control/: op_control.py  pin_test.py  qp.py
mujoco_arm_control/kuka_iiwa_14/: iiwa14.xml
optimization/: CMakeLists.txt  NLP.cpp  casadi.py  ipopt.py  single_dof_opt.ipynb  test.cpp
